# tries

./: README.md
data/: alice.txt  lamb.txt
trie-go/: README.md  go.mod  go.sum  gotrie.go  gotrie_test.go  retrieve.go  retrieve_test.go  walk.go  walk_test.go
trie-go/cmd/: main.go
trie-go/cmd/commands/: list.go  mostcommon.go  root.go  search.go
trie-go/internal/wordio/: wordio.go
trie-python/: LICENSE.md  pyproject.toml  trie-python.py
